--- a/aMovieDatabase/movies/templates/movies.html
+++ b/aMovieDatabase/movies/templates/movies.html
@@ -6,61 +6,77 @@
 <head>
   <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
-<body style="background-color: rgb(26, 25, 25);">
+<body style="background-color: aliceblue; background-image: url('https://t3.ftcdn.net/jpg/02/66/14/94/360_F_266149478_uV3E2THnewWN5jaAdoxraB6TjwLQyqXi.jpg')">
+  <section  style="align-content: center; border: solid rgb(9, 1, 1) 15px; border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
+    <div class="container mt-5">
+      <div class="section-title">
+        <div class="row d-flex justify-content-center">
+          {% include 'featured_movies.html' %}
+        </div>        
+      </div>
+    </div>
+      <hr>
+    </section>
   <section class="bg-dark">
     <div class="container mt-5">
-  <div class="filter bg-dark">
-  <form action="" method="GET">
-    <label for="genre-filter" >Genre:</label>
-    <select id="genre-filter" name="genre" class="form-control">
-      <option value="" {% if genre is None %}selected{% endif %}>All</option>
-      {% for available_genre in available_genres %}
-        <option value="{{ available_genre }}" {% if available_genre == genre %}selected{% endif %}>{{ available_genre }}</option>
-      {% endfor %}
-    </select>
-    <label for="year-filter">Release Year:</label>
-    <select id="year-filter" name="year" class="form-control">
-      <option value="" {% if selected_year is None %}selected{% endif %}>All</option>
-      {% for year in years %}
-        <option value="{{ year|date:"Y" }}" {% if year|date:"Y" == selected_year %}selected{% endif %}>{{ year|date:"Y" }}</option>
-      {% endfor %}
-    </select>
-    <button type="submit" class="btn btn-primary">Filter</button>
-  </form>
-</div>
+      <div class="filter bg-dark">
+        <form action="" method="GET">
+          <label for="genre-filter" >Genre:</label>
+          <select id="genre-filter" name="genre" class="form-control">
+            <option value="" {% if genre is None %}selected{% endif %}>All</option>
+            {% for available_genre in available_genres %}
+              <option value="{{ available_genre }}" {% if available_genre == genre %}selected{% endif %}>{{ available_genre }}</option>
+            {% endfor %}
+          </select>
+          <label for="year-filter">Release Year:</label>
+          <select id="year-filter" name="year" class="form-control">
+            <option value="" {% if selected_year is None %}selected{% endif %}>All</option>
+            {% for year in years %}
+              <option value="{{ year|date:"Y" }}" {% if year|date:"Y" == selected_year %}selected{% endif %}>{{ year|date:"Y" }}</option>
+            {% endfor %}
+          </select>
+             <label for="vote-average-filter-min">Vote Average (min):</label>
+          <input type="number" id="vote-average-filter-min" name="vote_average_min" min="1" max="10" step="0.1" class="form-control" value="{{ vote_average_min|default:1 }}">
+          <label for="vote-average-filter-max">Vote Average (max):</label>
+          <input type="number" id="vote-average-filter-max" name="vote_average_max" min="1" max="10" step="0.1" class="form-control" value="{{ vote_average_max }}">
+          <button type="submit" class="btn btn-primary">Filter</button>
+        </form>
+      </div>
+</section>
 
 
-      </div>
-      <div class="section-title">
-        <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <h2 class="font-weight-bold text-light mb-3">All Movies</h2>
-          </div>
-        </div>
-      </div>
-      <div class="row">
+<section  style="align-content: center; border: solid rgb(9, 1, 1) 15px; border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
+  <div class="container mt-5">
+    <div class="section-title">
+      <div class="row d-flex justify-content-center">
         {% for movie in movies %}
-          {% for review_image in movie_image %}
-            {% if review_image.caption == movie.title %}
-              <div class="col-lg-4 col-md-6 mb-4 border-dark">
-                <div class="card h-100 shadow-sm bg-dark ">
-                  <a href="details/{{ movie.title }}">
-                    <img src="{{ review_image.image }}" class="card-img-top" alt="Movie Poster">
-                    <div class="vote-average">{{ movie.vote_average }}</div>
-                    <div class="card-body bg-dark">
-                      <h5 class="card-title font-weight-bold text-light">{{ movie.title }}</h5>
-                           <h4 class="card-subtitle">{{ movie.release_date }}</h4>
-                    </div>
-                  </a>
-                </div>
+        {% for review_image in movie_image %}
+          {% if review_image.caption == movie.title %}
+            <div class="col-lg-4 col-md-6 mb-4">
+              <div class="movie-card">
+                <a href="details/{{ movie.title }}">
+                  <img src="{{ review_image.image }}" class="card-img-top" style="margin-top: 10px;" alt="Movie Poster">
+                  <div class="card-body">
+                    <h5 class="card-title">{{ movie.title }}</h5>
+                    <p style="color: aliceblue;">{{ movie.release_date }}</p>
+                    <div class="vote-average" style="color: aliceblue;">{{ movie.vote_average }}</div>
+                    </p>
+                  </div>
+                </a>
               </div>
-            {% endif %}
-          {% endfor %}
+            </div>
+          {% endif %}
         {% endfor %}
+      {% endfor %}      
+    </div>        
+    </div>
+  </div>
+    <hr>
+  </section>
+        
       </div>
         {% include 'pagination.html' %}
 </div>
-</section>
 </body>
 
 <style>
