--- a/aMovieDatabase/accounts/static/style.css
+++ b/aMovieDatabase/accounts/static/style.css
@@ -297,7 +297,6 @@ form input[type="submit"]:hover {
 }
 
 .filter button {
-  margin-left: 1rem;
   width: 100px;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
@@ -305,7 +304,7 @@ form input[type="submit"]:hover {
   font-weight: 400;
   line-height: 1.5;
   color: #fff;
-  background-color: #007bff;
+  background-color: #000000;
   border-color: #007bff;
   border-radius: 0.25rem;
 }
@@ -398,3 +397,51 @@ body{
       padding: 20px;
     }
   }
+
+  /* Mobile-specific styles */
+@media only screen and (max-width: 600px) {
+  /* Make the featured movie section full-width */
+  section {
+      width: 100%;
+  }
+  /* Reduce the size of the featured movies */
+  .featured-movie {
+      width: 80%;
+  }
+  /* Adjust the spacing between movies in the listing */
+  .movie-card {
+    width: 30%;
+    height: 40%;
+    margin: 10px 1%;
+    float: left;
+}
+  /* Reduce the size of the movie posters */
+  .movie-card img {
+      width: 6em;
+      height: 35%;
+  }
+  /* Use a smaller font for the movie titles */
+  .card-title {
+      font-size: 1.25em;
+  }
+  /* Use a smaller font for the movie descriptions */
+  .card-text {
+      font-size: 0.9em;
+  }
+  /* Center the movie titles and descriptions */
+  .card-body {
+      text-align: center;
+  }
+  .card- {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+  }
+
+  .movie-card {
+      flex-basis: 30%;
+      margin: 10px 1%;
+  }
+
+
+}
