--- a/aMovieDatabase/movies/templates/movies.html
+++ b/aMovieDatabase/movies/templates/movies.html
@@ -19,7 +19,7 @@
     </section>
     <section>
       <div class="container mt-5">
-        <div class="card filter" style="border: solid rgb(252, 252, 252); border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
+        <div class="card filter" style="border: solid rgb(11, 143, 245); border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
             <div class="card-body">
               <form action="" method="GET">
                 <div class="form-group">
@@ -41,11 +41,11 @@
                   </select>
                 </div>
                 <div class="form-group">
-                  <label for="vote-average-filter-min">Vote Average (min):</label>
+                  <label for="vote-average-filter-min">Rating (min):</label>
                   <input type="number" id="vote-average-filter-min" name="vote_average_min" min="1" max="10" step="0.1" class="form-control" value="{{ vote_average_min|default:1 }}">
                 </div>
                 <div class="form-group">
-                  <label for="vote-average-filter-max">Vote Average (max):</label>
+                  <label for="vote-average-filter-max">Rating (max):</label>
                   <input type="number" id="vote-average-filter-max" name="vote_average_max" min="1" max="10" step="0.1" class="form-control" value="{{ vote_average_max }}">
                 </div>
                 <div class="form-group">
